# pricedb-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  price_test.txt  sqlite::memory:  test.cmd
doc/: components.plantuml  price-download.plantuml
src/: app.rs  config.rs  dal_diesel.rs  dal_rbatis.rs  dal_sqlite.rs  database.rs  interface.rs  ledger_formatter.rs  lib.rs  main.rs  model.rs  price.rs  price_flat_file.rs  quote.rs  rbatis_repos.rs  repositories.rs  schema.rs
src/database/: dal_diesel.rs  dal_rbatis.rs  dal_rusqlite.rs  dal_sqlite.rs  dal_sqlx.rs  db_schema.rs  mappers_rusqlite.rs  schema.rs  schema_seaquery.rs
src/quote/: fixerio.rs  vanguard_au.rs  vanguard_au_2023.rs  vanguard_au_2023_detail.rs  vanguard_au_2023_prices.rs  yahooFinanceDownloader.rs  yahoo_finance_downloader.rs  yahoo_v2.rs
src/tests/: mod.rs
tests/: app_tests.rs  data_access_tests.rs  fixerio_tests.rs  mod.rs  prices.txt  quote_tests.rs  symbols.csv
