[package]
name = "pricedb"
version = "2.7.0"
authors = ["Alen Šiljak <dev@alensiljak.eu.org>"]
edition = "2021"
description = "Commodity price retrieval, storage, and export in format compatible with Plain-Text Accounting applications."
repository = "https://github.com/alensiljak/pricedb-rust"
license = "GPL-3.0-or-later"
keywords = ["ledger", "ledger-cli", "finance", "cli"]
categories = ["command-line-utilities", "finance"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
as-symbols = "0.5.0"
async-trait = "0.1.68"
chrono = "0.4.24"
clap = { version = "4.3.0", features = ["cargo", "derive"] }
confy = "0.5.1"
env_logger = "0.10.0"
indicatif = "0.17.3"
log = "0.4.17"
reqwest = { version = "0.11.20", features = ["json"] }
rust_decimal = "1.29.1"
rust_decimal_macros = "1.29.1"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.105"
tempfile = "3.5.0"
tokio = { version = "1.32.0", features = ["full"] }

[dev-dependencies]
env_logger = "0.10.0"
rstest = "0.18.2"
test-log = "0.2.11"
