[package]
name = "pricedb"
version = "2.8.1"
authors = ["Alen Šiljak <dev@alensiljak.eu.org>"]
edition = "2021"
description = "Commodity price retrieval, storage, and export in format compatible with Plain-Text Accounting applications."
repository = "https://github.com/alensiljak/pricedb-rust"
license = "GPL-3.0-or-later"
keywords = ["ledger", "ledger-cli", "finance", "cli"]
categories = ["command-line-utilities", "finance"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
as-symbols = "0.5.0"
async-trait = "0.1.77"
chrono = "0.4.35"
clap = { version = "4.5.2", features = ["cargo", "derive"] }
confy = "0.6.1"
env_logger = "0.11.3"
indicatif = "0.17.8"
log = "0.4.21"
reqwest = { version = "0.11.24", features = ["json"] }
rust_decimal = "1.34.3"
rust_decimal_macros = "1.34.2"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
tempfile = "3.10.1"
tokio = { version = "1.36.0", features = ["full"] }

[dev-dependencies]
env_logger = "0.11.3"
rstest = "0.18.2"
test-log = "0.2.15"
